SFDCGitProject/src/objects/Guru__c.object
<CustomObject>
    <fields>
        <fullName>CrossObjectGuru__c</fullName>
        <label>CrossObjectGuru</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level -1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level -2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level -3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Level__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Middle Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Top Level</label>
        <type>Checkbox</type>
    </fields>
    <label>Guru</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Guru Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gurus</pluralLabel>
    <recordTypes>
        <fullName>Middle_Level</fullName>
        <active>true</active>
        <label>Middle Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Level</fullName>
        <active>true</active>
        <description>Top Level</description>
        <label>Top Level</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>